css/core.css
body {
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    -webkit-font-smoothing: subpixel-antialiased;
    height: 100%;
    /*overflow: hidden;*/
    max-width: 100%;
    max-height: 100%;
}
md-toolbar-tools {
    font-family: Montserrat;
}

.background-shade-out {
    visibility: hidden;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: #000;
    opacity: 0.3;
    transition: visibility 0s linear 0.23s, opacity 0.5s linear  0.3s;
}

.important-note {
    padding: 15px;
    color: #6B1414;
    background-color: #FFBFBF;
    border: 2px solid #CE6363;
}

a {
    color: #30BCCF; /*#00AFD8;*/
}

a:hover,
a:focus {
    cursor: pointer;
    color: #006C86;
    text-decoration: none;
}

a.disabled {
    cursor: not-allowed;
}

.position-fixed {
    position: fixed;
}

.bold {
    font-weight: 800;
}

.nowrap {
    white-space: nowrap;
}

#content{
    padding: 5px 20px;
}

.app-toolbar,
.main-toolbar {
    padding-left: 0;
}

.logo {
    position: relative;
}

.logo a:hover {
    opacity: 0.9;
    text-decoration: none;
}

.logo .ms-status,
.ms-new-notify {
    position: absolute;
    right: -20px;
    top: 5px;
    font-size: .6em;
    color: #aaa;
}

.logo-sub-text {
    margin: 10px 0 0 0;
    font-size: 1.17em;
}

indent {
    display:block;
    margin-left: 1.8em;
    line-height: 1.5em;
}

/**
 * general styling
 */

.eq-direction {
    color: #666;
}

/**
 * animations
 */
.animate-show {
    -webkit-transition: all linear 0.1s !important;
    transition: all linear 0.1s !important;
}

.animate-show.ng-hide {
  opacity: 0 !important;
}


/**
 * lists
 */
.info-list {
    font-size: 1.2em;
    margin: 0 0 0 10px;
}
.info-list .sub-item {
    margin: 0 0 0 30px;
}

.info-check {
    content: &#10003;
    position:relative;
    top: 2px;
    font-size: 1.5em;
    color: #2FBBD0;
}

.md-primary { /*hack hack hack #fixme */
    background-color: #30BCCF !important;
    color: #fff !important;
}

.md-secondary {
    background-color: rgba(95, 98, 168, 0.91) !important;
    color: #fff !important;
}

.md-danger {
    background-color: #DA265D !important;
    color: #fff !important;
}

.md-success {
    background-color: #38BD5C !important;
    color: #fff !important;
}

md-toolbar {
    z-index: 49;
}



.ms-color { color: #26C6DA; }
.ms-color-complete, .color-complete { color: #26DA4A; }
.ms-color-error, .color-error { color: #DA265D; }
.color-light-purple { color: #E5E4FF !important; }


.inline { display: inline; }

.text-highlight {
    color: #000;
    background-color: rgba(249, 255, 179, 0.43);
    background-color: rgba(48, 175, 198, 0.125);
    border-radius: 5px;
    padding: 3px;
    margin: -3px;
    font-weight: 800;
}

.text-light {
    color: #888;
}

.hover:hover {
    opacity: 1.0;
}
.hover {
    opacity: 0.7;
}

a.no-link {
    color: #000;
        opacity: 0.7;
    text-decoration: none;
}

a.no-link:hover {
    opacity: 1.0;
}

a.no-href {
    text-decoration: none;
}


.vertical-center {
    margin-top: auto;
    margin-bottom: auto;
}

.hidden {
    visibility: hidden;
}

.small {
    font-size: .8em;
}

small.help-text {
    font-size: 8pt;
}


#login {
    border-right: 1px solid #666;
}

.alt-login-container {
    margin: 20px 20px;
}

.alt-login-patric img {
    border: 2px solid #ddd;
}

td[editable] {
    position: relative;
}

.editable-header {
    font-size: 24px;
}

.editable-textarea {
    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
}

.md-button {
    text-transform: none;
}
.login img {
    margin: -2px 5px 0 0;
    width: 40px;
    height: 40px;
}

.alt-login {
    margin-top: 10px;
}

.alt-login:hover {
    opacity: 0.9;
    cursor: pointer;
}

.alt-login div {
    margin: 8px 10px;
}

.label-beta {
    font-size: 10px;
    position: absolute;
}

.label-alpha {
    font-size: 10px;
}

:focus {
    outline: none !important;
}

.no-margin {
    margin: 0;
}

.pointer:hover {
    cursor: hand;
    cursor: pointer;
}
.cursor:hover {
    cursor: default;
}

.form-control, .btn {
    border-radius: 0px !important;
}

/**
 * navigation mods
 */

md-toolbar,
.md-toolbar-tools {
    height: 50px;
    min-height: 50px;
    max-height: 50px;
}

.md-toolbar-accent {
    background-color: #30BCCF !important;
}

.md-toolbar-tools {
    font-size: 1em;
    background-color: #2D224E;
}

/**
 * toolbars
 */
ul.toolbar {
    padding: 0;
    margin: 0;
    height: 100%;
    list-style: none;
}

ul.toolbar > li {
    color: #EBEBEB;
    height: 100%;
    display: inline-block;
    transition: border-width 100ms;
}
ul.toolbar > li.active {
    border-bottom: 3px solid #ddd;
}
ul.toolbar > li:not(.active):hover {
    border-bottom: 3px solid #ddd; /*#30BCCF;/* /*#9FA1DE;*/
}

ul.toolbar > li > a {
    display: block;
    font-size: 8pt;
    line-height: 1.1em;
    margin: 0 7px;
    text-align: center;
    height: 100%;
}

ul.toolbar > li:hover > a,
ul.toolbar > li.active > a {
    color: #EBEBEB;

}

ul.toolbar > li > a >i:not(.fa-caret-down) {
    display: inline-block;
    padding-top: 10px;
    font-size: 30px;
    text-align: center;
}

ul.toolbar li > a > i.icon-benzene {
    font-weight: 600;
}


.toolbar > li.divider {
    position: absolute;
    display: inline;
    height: 40px;
    margin: 5px;
    border-right: 1px solid #444;
}

.brand-home {
    background-color: transparent;
}
.brand-home:hover {
    background-color: transparent !important;
}


.toolbar-right {

    height: 100%;
}

.toolbar-right > div {
    color: #fff;
    display: inline-block;
    height: 100%;
    padding: 0px 10px;
}
.toolbar-right > div > a{
    display: block;
    height: 100%;
    padding-top: 15px;
}

.toolbar-right > div li {
    display: block;
    width: 100%;
}
.toolbar-right > div li a{
    white-space:nowrap;
    display: block;
    width: 100%;
    padding: 5px 15px;
}

.toolbar-right ul{
    display: block;
    margin: 0;
    width: 100%;
}
/* ... */

